updated my website with default bootstrap CSS

--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
     <header>
         <h1>Patrik Turcani</h1>
         <h2>My Profile</h2>
-        <img alt="My picture" src="images/profilepic.jpg" width="200px">
+        <img alt="My Picture" src="images/profilepic.jpg" width="200px">
     </header>
+    <section>
+        <h4>My Skills</h4>
+        <p>Agile, Scrum and similar methodologies</p>
+        <p>Cooking up sweet code</p>
+    </section>
     <section>
         <h4>My Hobbies</h4>
         <ul>
