--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <meta name="description" content="This is a wonderful page">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS -->
     <title>My Profile</title>
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<body class="bg-dark text-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">My Portfolio</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,45 +33,44 @@
             </div>
         </div>
     </nav>
-    <header class="text-center my-4">
+    <header class="text-warning text-center my-4">
         <h1>Patrik Turcani</h1>
-        <h2>My Profile</h2>
-        <img alt="MyPic" src="images/profilepic.jpg" class="img-thumbnail" width="200px">
+        <img alt="MyPic" src="images/profilepic.jpg" class="rounded-circle border border-warning" width="200px">
     </header>
     <main class="container">
         <section class="my-4">
-            <h4>My Skills</h4>
+            <h4 class="text-warning">My Skills</h4>
             <p>Agile, Scrum and similar methodologies</p>
             <p>Cooking up sweet code</p>
         </section>
         <section class="my-4">
-            <h4>My Hobbies</h4>
+            <h4 class="text-warning">My Hobbies</h4>
             <ul class="list-group">
-                <li class="list-group-item">Hiking</li>
-                <li class="list-group-item">Cooking</li>
-                <li class="list-group-item">Video Games</li>
+                <li class="list-group-item bg-dark text-light border-0">Hiking</li>
+                <li class="list-group-item bg-dark text-light border-0">Cooking</li>
+                <li class="list-group-item bg-dark text-light border-0">Video Games</li>
             </ul>
         </section>
         <section class="my-4">
-            <h4>My Goals</h4>
+            <h4 class="text-warning">My Goals</h4>
             <ol class="list-group list-group-numbered">
-                <li class="list-group-item">Financial Freedom</li>
-                <li class="list-group-item">Become a developer</li>
-                <li class="list-group-item">To have a house and a family</li>
+                <li class="list-group-item bg-dark text-light border-0">Financial Freedom</li>
+                <li class="list-group-item bg-dark text-light border-0">Become a developer</li>
+                <li class="list-group-item bg-dark text-light border-0">To have a house and a family</li>
             </ol>
         </section>
         <section class="my-4">
-            <h3>Search for news</h3>
+            <h3 class="text-warning">Search for news</h3>
             <form id="myform" action="https://www.bbc.co.uk/search" class="d-flex">
                 <div class="form-group me-2">
-                    <label for="mysearch" class="form-label">Search for</label>
+                    <label for="mysearch" class="form-label text-warning">Search for</label>
                     <input id="mysearch" name="q" type="text" class="form-control" value="Birmingham">
                 </div>
-                <button type="submit" class="btn btn-primary align-self-end">Submit</button>
+                <button type="submit" class="btn btn-warning align-self-end">Submit</button>
             </form>
         </section>
     </main>
-    <footer class="text-center mt-4 mb-4">
+    <footer class="footer text-center mt-4 mb-4 bg-dark text-light">
         <small>Copyright &#169; Sparta Global 2024 <cite>By Patrik Turcani</cite></small>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2twF05onIHZC1oFlmNE6aAPafKzxipnC1JhVsTA0DvI5aCoEow5sFKp1ZEF" crossorigin="anonymous"></script>
