--- a/projects.html
+++ b/projects.html
@@ -6,41 +6,63 @@
     <meta name="author" content="Patrik Turcani">
     <meta name="description" content="This is a wonderful page">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="profileStyle.css" rel="stylesheet">
-    <title>My Profile</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS -->
+    <title>My Projects</title>
 </head>
 
-<body>
-    <nav>
-        <a href="index.html">Go to profile</a>
-        <a href="projects.html">Go to projects</a>
-        <a href="https://www.linkedin.com/in/patrik-turcani-b6066a24a/?originalSubdomain=uk" target="_blank">My
-            LinkedIn</a>
+<body class="bg-dark text-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">My Portfolio</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Go to profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="projects.html">Go to projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.linkedin.com/in/patrik-turcani-b6066a24a/?originalSubdomain=uk" target="_blank">My LinkedIn</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
-    <section>
-        <h1>Projects</h1>
-        <table>
-            <thead>
-                <tr>
-                    <th>Project Name</th>
-                    <th>Description</th>
-                    <th>Year</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Agile Project</td>
-                    <td>Did some stuff with user stories</td>
-                    <td>2024</td>
-                </tr>
-                <tr>
-                    <td>Safari Park Project</td>
-                    <td>Demonstrated polymorphism</td>
-                    <td>2024</td>
-                </tr>
-            </tbody>
-        </table>
-    </section>
+    <main class="container my-4">
+        <section>
+            <h1 class="text-warning text-center my-4">Projects</h1>
+            <table class="table table-dark table-striped table-bordered">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Project Name</th>
+                        <th>Description</th>
+                        <th>Year</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Agile Project</td>
+                        <td>Did some stuff with user stories</td>
+                        <td>2024</td>
+                    </tr>
+                    <tr>
+                        <td>Safari Park Project</td>
+                        <td>Demonstrated polymorphism</td>
+                        <td>2024</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </main>
+    <footer class="footer text-center mt-4 mb-4 bg-dark text-light">
+        <small>Copyright &#169; Sparta Global 2024 <cite>By Patrik Turcani</cite></small>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2twF05onIHZC1oFlmNE6aAPafKzxipnC1JhVsTA0DvI5aCoEow5sFKp1ZEF" crossorigin="anonymous"></script>
 </body>
 
 </html>
