--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
     <main class="container">
         <section class="my-4">
             <h4 class="text-warning">My Skills</h4>
-            <p>Agile, Scrum and similar methodologies</p>
-            <p>Cooking up sweet code</p>
+            <ul class="list-group">
+                <li class="list-group-item bg-dark text-light border-0">Agile and Scrum</li>
+                <li class="list-group-item bg-dark text-light border-0">Java, Springboot, MySQL, MongoDB</li>
+            </ul>
         </section>
         <section class="my-4">
             <h4 class="text-warning">My Hobbies</h4>
@@ -54,9 +56,8 @@
         <section class="my-4">
             <h4 class="text-warning">My Goals</h4>
             <ol class="list-group list-group-numbered">
-                <li class="list-group-item bg-dark text-light border-0">Financial Freedom</li>
-                <li class="list-group-item bg-dark text-light border-0">Become a developer</li>
-                <li class="list-group-item bg-dark text-light border-0">To have a house and a family</li>
+                <li class="list-group-item bg-dark text-light border-0">Hike all Scottish hills!</li>
+                <li class="list-group-item bg-dark text-light border-0">Be part of the Software Development team as a Full-Stack Developer</li>
             </ol>
         </section>
         <section class="my-4">
@@ -64,7 +65,7 @@
             <form id="myform" action="https://www.bbc.co.uk/search" class="d-flex">
                 <div class="form-group me-2">
                     <label for="mysearch" class="form-label text-warning">Search for</label>
-                    <input id="mysearch" name="q" type="text" class="form-control" value="Birmingham">
+                    <input id="mysearch" name="q" type="text" class="form-control" value="New Recipes">
                 </div>
                 <button type="submit" class="btn btn-warning align-self-end">Submit</button>
             </form>
