--- a/projects.html
+++ b/projects.html
@@ -46,13 +46,13 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Agile Project</td>
-                        <td>Did some stuff with user stories</td>
+                        <td><a href="https://github.com/Patrikturc/FantasticNine" target="_blank">Doomflix with MongoDB</a></td>
+                        <td>Made backend for the Doomflix web app/API worked on MovieService mostly</td>
                         <td>2024</td>
                     </tr>
                     <tr>
-                        <td>Safari Park Project</td>
-                        <td>Demonstrated polymorphism</td>
+                        <td><a href="https://github.com/Patrikturc/Tech261" target="_blank">Sparta training</a></td>
+                        <td>Learning all I need to know to kickstart my career</td>
                         <td>2024</td>
                     </tr>
                 </tbody>
