Minor changes to My Goals section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h4 class="text-warning">My Goals</h4>
             <ol class="list-group list-group-numbered">
                 <li class="list-group-item bg-dark text-light border-0">Hike all Scottish hills!</li>
-                <li class="list-group-item bg-dark text-light border-0">Be part of the Software Development team as a Full-Stack Developer</li>
+                <li class="list-group-item bg-dark text-light border-0">Become the go-to guy in a successful Software Development team</li>
             </ol>
         </section>
         <section class="my-4">
